Bug 251686 - [WGSL] Record type errors while type checking
Summary: [WGSL] Record type errors while type checking
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebGPU (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tadeu Zagallo
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-02-03 06:42 PST by Tadeu Zagallo
Modified: 2023-02-06 07:34 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tadeu Zagallo 2023-02-03 06:42:02 PST
...
Comment 1 Radar WebKit Bug Importer 2023-02-03 06:42:19 PST
<rdar://problem/105004579>
Comment 2 Tadeu Zagallo 2023-02-03 06:47:22 PST
Pull request: https://github.com/WebKit/WebKit/pull/9603
Comment 3 EWS 2023-02-06 07:34:54 PST
Committed 259892@main (cd24b946e717): <https://commits.webkit.org/259892@main>

Reviewed commits have been landed. Closing PR #9603 and removing active labels.